Add an ingredients list for lasagne

--- a/lasagne.html
+++ b/lasagne.html
@@ -8,5 +8,22 @@
     <body>
        <h1>Lasagne</h1>
         <img src="images/lasagne.jpg">
+        <h2>Description</h2>
+        <p>This fabulous lasagne recipe will become a favourite comfort food in your house for sure. Who can resist a rich tomato base filled with fresh herbs. Combine that with a well seasoned creamy sauce and you have heaven on a plate.</p>
+        <h3>Ingredients</h3>
+        <p>
+            <ul>
+                <li>2 medium onions</li>
+                <li>250g fresh minced beef</li>
+                <li>3 cloves garlic</li>
+                <li>pinch of salt and pepper<li>
+                <li>2 tins tomatoes</li>
+                <li>1 red pepper</li>
+                <li>6 sheets of fresh pasta</li>
+                <li>500ml full fat milk</li>
+                <li>50g plain flour</li>
+                <li>50g butter</li>
+            </ul>
+        </p>
     </body>
 </html>
