Add steps list for lasagne

--- a/lasagne.html
+++ b/lasagne.html
@@ -19,11 +19,32 @@
                 <li>pinch of salt and pepper<li>
                 <li>2 tins tomatoes</li>
                 <li>1 red pepper</li>
-                <li>6 sheets of fresh pasta</li>
+                <li>1 handful fresh basil</li>
+                <li>8 sheets of fresh pasta</li>
                 <li>500ml full fat milk</li>
-                <li>50g plain flour</li>
+                <li>50g plain flour plus 1 tblsp</li>
                 <li>50g butter</li>
+                <li>200g cheese of your choice</li>
             </ul>
+        </p>
+        <h4>Steps</h4>
+        <p>
+            <ol>
+                <li>Chop 1 onion. Gently heat milk in a saucepan and add salt, pepper and the chopped onion. Leave to infuse.</li>
+                <li>Chop the second onion. Add a dash of oil to a pan and fry onion until translucent. Crush garlic and add to onions. Fry until fragrant.
+                <li>Add mince and salt to the onions and cook until the mince is browned.</li>
+                <li>Add 1 tablespoon of flour to mince. Stir until mixed.</li>
+                <li>Add tomatoes to mince. Stir until mixed.</li>
+                <li>Chop red pepper and add to mince with gently chopped basil</li>
+                <li>Strain milk to remove onions and set aside.</li>
+                <li>Heat butter in a pan until melted. Add 50g flour and mix until well combined.</li>
+                <li>Add milk to mixture a little at a time. Mix until completely smooth between each addition. Not mixing well will result in a lumpy sauce.</li>
+                <li>Add 100g cheese to sauce and mix until melted.</li>
+                <li>Place 1/3 mince into dish. Layer 2 pasta sheets on top. Repeat twice more.</li>
+                <li>Add half of bechemel sauce to dish. Layer last 2 pasta sheets on top. Add the remaining sauce and top with grated cheese.</li>
+                <li>Bake until cheese is melted and a little brown on top.</li>
+                <li>Remove from oven and proceed to stuff your face.</li>
+            </ol>
         </p>
     </body>
 </html>
