Add all files for recipes

--- a/lasagne.html
+++ b/lasagne.html
@@ -16,7 +16,7 @@
                 <li>2 medium onions</li>
                 <li>250g fresh minced beef</li>
                 <li>3 cloves garlic</li>
-                <li>pinch of salt and pepper<li>
+                <li>pinch of salt and pepper</li>
                 <li>2 tins tomatoes</li>
                 <li>1 red pepper</li>
                 <li>1 handful fresh basil</li>
