Add updated index page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="lasagne.html">Lasagne</a>
-
+    <ul>
+        <li><a href="lasagne.html">Lasagne</a></li>
+        <li><a href="cookies.html">Cookies</a></li>
+        <li><a href="curry.html">Curry</a></li>
+    </ul>
 
 </body>
 </html>
